# fan-controller

./: .cruft.json  .pre-commit-config.yaml  README.md  fan_controller.py  pyproject.toml
fan_controller/: fan_controller.py
renders/: box.stl  fan_controller.stl  lid.stl
